Update requirements.txt to include scikit-learn and pypdf

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,4 @@
-# Basic environment for retrieval experiments
-numpy
-tqdm
 sentence-transformers
-faiss-cpu
-openai
-PyPDF2
+scikit-learn
+numpy
+pypdf
